# hematite

./: Cargo.toml  Readme.md
crates/hematite_ecs/: Cargo.toml
crates/hematite_ecs/src/: app.rs  lib.rs  plugin.rs  schedules.rs
crates/hematite_macros/: Cargo.toml  build.rs
crates/hematite_macros/src/: all_packets.rs  deserialize.rs  lib.rs  packet.rs  packet_id.rs  serialize.rs
crates/hematite_macros/src/packet/: mod.rs
crates/hematite_serialization/: Cargo.toml
crates/hematite_serialization/src/: de.rs  lib.rs  ser.rs
crates/hematite_serialization/src/builtin_types/: mod.rs  var_int.rs  var_long.rs
crates/hematite_serialization/src/std_types/: bool.rs  mod.rs  nbt.rs  num_types.rs  option.rs  prefixed_array.rs  uuid.rs
crates/hematite_utils/: Cargo.toml
crates/hematite_utils/src/: lib.rs  timer.rs
src/: app.rs  main.rs
src/core/: asset_types.rs  mod.rs  nbt.rs  position.rs
src/ecs/: app.rs  mod.rs  schedules.rs
src/plugins/networking/: handshake.rs  listener.rs  mod.rs
src/plugins/networking/handler/: bevy_side.rs  disconnect_client.rs  handle_login.rs  mod.rs
src/protocol/: mod.rs
src/protocol/data_types/: angle.rs  array.rs  bool.rs  game_profile.rs  identifier.rs  mod.rs  nbt.rs  num_types.rs  option.rs  position.rs  prefixed_array.rs  proto_string.rs  string.rs  uuid.rs  var_int.rs  var_long.rs
src/protocol/formatter/: de.rs  error.rs  ser.rs
src/protocol/packets/: all.rs  mod.rs
src/protocol/packets/configuration/: mod.rs
src/protocol/packets/handshake/: mod.rs  serverbound.rs
src/protocol/packets/login/: clientbound.rs  mod.rs  serverbound.rs
src/protocol/packets/play/: mod.rs
src/protocol/packets/status/: mod.rs  serverbound.rs
src/protocol/packets/status/clientbound/: ping_response.rs  status_response.rs
src/protocol/packets/status/serverbound/: ping_request.rs  status_request.rs
src/protocol/ser_de/: de.rs  ser.rs
