[package]
name = "hematite"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/*"]

[workspace.dependencies]
bevy_ecs = "0.19"

[dependencies]
derive_more = { version = "2.1", features = ["deref", "deref_mut"] }
thiserror = "2.0"
uuid = { version = "1.23", features = ["v3", "v4", "v7"] }
hematite_macros = { path = "crates/hematite_macros" }
hematite_utils = { path = "crates/hematite_utils" }
hematite_ecs = { path = "crates/hematite_ecs" }
bevy_ecs.workspace = true
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
flume = "0.12.0"
